--- a/content/posts/hugo測試/文章1.md
+++ b/content/posts/hugo測試/文章1.md
@@ -34,6 +34,28 @@ sequenceDiagram
     Bob-->John: Jolly good!
 ```
 
+```echarts
+option = {
+    xAxis: {
+        type: 'category',
+        data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']
+    },
+    yAxis: {
+        type: 'value'
+    },
+    series: [{
+        data: [820, 932, 901, 934, 1290, 1330, 1320],
+        type: 'line'
+    }]
+};
+```
+
+
+
+
+
+
+
 
 
 
