--- a/content/ch/blog/文章2.md
+++ b/content/ch/blog/文章2.md
@@ -17,7 +17,7 @@ bbbbb
 
 <a href={{< ref "/page/about.md" >}}>URL</a>
 
-```c
+```c {linenos=table, hl_lines=[2, "4-5"], linenostart=199}
 #include <stdio.h>
 int main() {
    // printf() displays the string inside quotation
