--- a/content/zh-tw/blog/文章1.md
+++ b/content/zh-tw/blog/文章1.md
@@ -1,12 +1,12 @@
 ---
-author: "哈桑"
 title: "範例文章"
 date: 2023-06-05
-description: "這是示範"
-tags: ["shortcodes", "privacy"]
+description: Generic description
 categories: ['cat1']
-topics: ["T1", "T2"]
-thumbnail: https://picsum.photos/id/1002/400/250
+tags: ["shortcodes", "privacy"]
+toc: true
+math: false
+draft: false
 ---
 
 測試
