--- a/content/zh-tw/blog/文章3.md
+++ b/content/zh-tw/blog/文章3.md
@@ -1,12 +1,12 @@
 ---
-author: "哈桑"
-title: '露營帳篷'
-description: "覺得最好看的隧道帳"
+title: "露營帳篷"
 date: 2024-03-07T00:33:30+08:00
-tags: ["帳篷", "隧道帳"]
+description: Generic description
 categories: ['cat3']
-topics: ["T2", "T3"]
-thumbnail: "https://i.imgur.com/ZBoDb30.jpeg"
+tags: ["帳篷", "隧道帳"]
+toc: true
+math: false
+draft: false
 ---
 
 # 這是覺得最好看的隧道帳了
