--- a/content/zh-tw/blog/3dprinter/折疊椅2.md
+++ b/content/zh-tw/blog/3dprinter/折疊椅2.md
@@ -2,8 +2,8 @@
 title: "3dPrnter 折疊椅2"
 date: 2024-03-18T13:19:51+08:00
 description: Generic description
-categories: []
-tags: []
+categories: ["3D Printer"]
+tags: ["foldable stool", "折疊椅"]
 toc: true
 math: true
 draft: false
