--- a/content/zh-tw/blog/3dprinter/折疊椅.md
+++ b/content/zh-tw/blog/3dprinter/折疊椅.md
@@ -3,7 +3,7 @@ title: 折疊椅
 date: 2024-03-18T13:18:49+08:00
 description: 3D列印折疊椅
 categories: ["3D Printer"]
-tags: ["foldable stool", "折疊椅"]
+tags: ["Foldable Stool", "折疊椅"]
 toc: true
 math: true
 draft: true
